# pc-nrfjprog-js

./: .clang-format  .clang-tidy  .gitignore  .jshintrc  .travis.yml  CMakeLists.txt  README.md  TODO.txt  api.js.html  azure-pipelines.yml  build.js  check-jlink-arm.js  get-dll.js  get-library.js  index.d.ts  index.html  index.js  module-pc-nrfjprog-js.html  package.json  pc-nrfjprog-js.module_RTT.html  rtt.js.html  run-tests.js
__tests__/: generic.test.js  log.test.js  racecondition.test.js  rtt.test.js  rttfailing.test.js  simpleTest.js  single-device-destructive.test.js  single-device-non-destructive.test.js
__tests__/__snapshots__/: generic.test.js.snap  rtt.test.js.snap  simpleTest.js.snap  single-device-non-destructive.test.js.snap
__tests__/hex/: rtt.hex
cmake/: apple.cmake  clang-dev-tools.cmake  gcc.cmake  msvc.cmake
doc/: api.js  rtt.js
nrfjprog/: nRF5x-Command-Line-Tools_9_6_0_Linux-i386.tar  nRF5x-Command-Line-Tools_9_6_0_Linux-x86_64.tar  nRF5x-Command-Line-Tools_9_6_0_OSX.tar  nRF5x-Command-Line-Tools_9_7_0_Linux-i386.tar  nRF5x-Command-Line-Tools_9_7_0_Linux-x86_64.tar  nRF5x-Command-Line-Tools_9_7_0_OSX.tar  nRF5x-Command-Line-Tools_9_7_1_Linux-i386.tar  nRF5x-Command-Line-Tools_9_7_1_Linux-x86_64.tar  nRF5x-Command-Line-Tools_9_7_1_OSX.tar
nrfjprog/include/: DllCommonDefinitions.h  highlevelnrfjprogdll.h  hilvlnrfjprogdll.h  mergehex.h  nrfjprog.h  nrfjprogdll.h
scripts/: get-jlink.js  post-install.js  pre-install.js  publish-all-prebuilt.js  repackage.sh
src/: FlashMemorySegment.cpp  FlashMemorySegment.h  KeilHexFile.cpp  KeilHexFile.h  common.cpp  common.h  dllfunc.cpp  dllfunc.h  dllloader.h  export.cpp  flashmemorysegment.cpp  flashmemorysegment.h  highlevel.cpp  highlevel.h  highlevel_batons.h  highlevel_common.h  highlevel_helpers.cpp  highlevel_helpers.h  highlevelwrapper.cpp  highlevelwrapper.h  keilhexfile.cpp  keilhexfile.h  libraryloader.h  nRFJProgJs.cpp  nRFJProgJs.h  nan_wrap.h  nrfjprog_common.h  nrfjprog_helpers.cpp  nrfjprog_helpers.h  nrfjprogjs.cpp  nrfjprogjs.h  nrfjprogjs_batons.h  nrfjprogwrapper.cpp  nrfjprogwrapper.h  osfiles.cpp  osfiles.h  rtt.cpp  rtt.h  rtt_batons.h  rtt_helpers.cpp  (+1 more)
src/platform/: dllfunc_linux.cpp  dllfunc_osx.cpp  dllfunc_win32.cpp  osfiles_linux.cpp  osfiles_osx.cpp  osfiles_win32.cpp
src/platform/linux/: libraryloader.cpp  libraryloader_platform.h  osfiles.cpp
src/platform/osx/: libraryloader.cpp  libraryloader_platform.h  osfiles.cpp
src/platform/win/: dllloader.cpp  dllloader_platform.h  libraryloader.cpp  libraryloader_platform.h  osfiles.cpp  win_delay_load_hook.cpp
src/utility/: conversion.cpp  conversion.h  errormessage.cpp  errormessage.h  utility.cpp  utility.h
test/: debug1.test.js  debug2.test.js  generic.test.js  index.test.js  modem-dfu-destructive.test.js  racecondition.test.js  rtt.js  rtt.test.js  rttfailing.test.js  simpleTest.js  single-device-destructive.js  single-device-destructive.test.js  single-device-non-destructive.test.js
test/__snapshots__/: index.test.js.snap  rtt.test.js.snap  rttfailing.test.js.snap  single-device-non-destructive.test.js.snap
test/hex/: connectivity_1.1.0_1m_with_s132_3.0.hex  program.hex  while_true_nrf53_application.hex  while_true_nrf53_network.hex
